--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -1,5 +1,13 @@
 html
-  head
-    title= title
-  body
-    h1= message
+ head
+  title= title
+  link(href='https://fonts.googleapis.com/css?family=Raleway:400,300,600', rel='stylesheet', type='text/css')
+  link(rel='stylesheet', href='css/normalize.css')
+  link(rel='stylesheet', href='css/skeleton.css')
+  link(rel='stylesheet', href='css/custom.css')
+
+  script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
+  link(rel='icon', type='image/png', href='images/favicon.png')
+
+ body
+  h1= message
